# CycleBuddy

./: .dockerignore  .env.production  .eslintrc.js  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-simple  FREE_DEPLOYMENT_GUIDE.md  GOOGLE_TTS_SETUP.md  LICENSE  Makefile  README.md  StellarIntegration.md  cloudbuild-backend.yaml  deploy-backend.sh  deploy-free.sh  deploy-frontend.sh  deploy-without-hardhat.js  deployed-addresses.json  hardhat.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  prettier.config.js  railway.json  start-nginx.sh  tailwind.config.js  tsconfig.json  vercel.json  vite.config.cjs  vite.config.ts
backend/: .gitignore  index.js  package-lock.json  package.json
backend/features/: cycle.js  productivity.js  security.js  vertex.js
backend/middlewares/: auth.js
contracts/: Cargo.toml
contracts/ai-health-insights/: Cargo.toml
contracts/auth/: Cargo.toml
contracts/bahamut/: .env.bak  CycleStreakToken.js  DailyRewards.sol  (+9 more)
docs/: DEPLOYMENT_GUIDE.md  api.md  architecture.md  breakthrough-features-implementation.md  breakthrough-features.md  daily-rewards.md  development.md  security.md  smart-contracts.md  stellar-integration.md  system-architecture.md  user-flows.md  user-guide.md
scripts/: build-contracts.sh  create-test-env.sh  deploy-bahamut.sh  deploy-contracts.sh  deploy-local.js  deploy.js  fund-account.sh  setup-dev-env.sh  simple-deploy.js  simple_deploy.js  start-app.sh  test-deploy.js
src/: App.tsx  lib.rs  main.tsx
(+88 files in other folders)
