[package]
name = "cyclebuddy-contracts"
version = "1.0.0"
edition = "2021"
description = "Smart contracts for CycleBuddy built on Stellar"
authors = ["CycleBuddy Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "0.9.2"
stellar-sdk = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = "1.0"
rand = "0.8"
thiserror = "1.0"

[dev-dependencies]
soroban-sdk = { version = "0.9.2", features = ["testutils"] }
stellar-sdk = { version = "0.9.2", features = ["testutils"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace]
members = [
    "contracts/registry",
    "contracts/data",
    "contracts/auth",
    "contracts/community"
] 